syntax = "proto3";
package assetmantle.base.data;

import "gogoproto/gogo.proto";
import "assetmantle/base/data/internal/accAddressData.v1.proto";
import "assetmantle/base/data/internal/booleanData.v1.proto";
import "assetmantle/base/data/internal/decData.v1.proto";
import "assetmantle/base/data/internal/heightData.v1.proto";
import "assetmantle/base/data/internal/idData.v1.proto";
import "assetmantle/base/data/internal/numberData.v1.proto";
import "assetmantle/base/data/internal/stringData.v1.proto";

message AnyData {
  option (gogoproto.goproto_getters) = false;

  oneof impl {
    AccAddressData acc_address_data = 1;
    BooleanData boolean_data = 2;
    DecData dec_data = 3;
    HeightData height_data = 4;
    IDData i_d_data = 5;
    StringData string_data = 6;
    NumberData number_data = 7;
    ListData list_data = 8;
  }
}

message ListData {
  option (gogoproto.goproto_getters) = false;

  repeated AnyData data_list = 1;
}
