syntax = "proto3";
package parameters;

import "gogoproto/gogo.proto";
import "assetmantle/schema/properties/base/metaProperty.v1.proto";

message Parameter {
  option (gogoproto.goproto_getters) = false;
  properties.MetaProperty meta_property = 1;
}
